--- a/friends.html
+++ b/friends.html
@@ -46,7 +46,7 @@
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-componet__text">
-            <h4 class="user-component__title">Nicolas</h4>
+            <h4 class="user-component__title">한성렬</h4>
             <!--<h6 class="user-component__subtitle">this text whatever</h6>-->
           </div>
         </div>
